--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Christiana Eke</a>.
+      Coded by <a href="https://portfolio-christiana-eke.vercel.app/" target="_blank">Christiana Eke</a>.
     </p>
   </footer>
 <script src="js/main.js"></script>  
